fix: settings csrf, project detail

--- a/templates/project-detail.html
+++ b/templates/project-detail.html
@@ -24,9 +24,9 @@
           Размеры: <b>{{project.dimensions}}м</b><br>
           Общая площадь: <b>{{project.square}}м<sup class="text__sup">2</sup></b>
         </p>
-        <p class="text">
+        <!-- <p class="text">
           #TODO short descriprion in model
-        </p>
+        </p> -->
         <picture class="img">
           <img loading="lazy" src="{% static '../'|add:project.image.url|add:'' %}" alt="" class="img__img preview__img">
         </picture>
